2023-06-15  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclassdoc):
	Renamed from ebuild-mode-keywords-eclass-documentation.
	* ebuild-mode.el (ebuild-mode-font-lock-keywords): Update.

2023-05-13  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-eapi-deprecated):
	Add remaining prep* commands and portageq.

2023-03-28  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-squash-empty-lines): New function.
	(ebuild-repo-mode-before-save): Call it.

2023-03-26  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.63 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclass):
	Regenerated.

2023-03-24  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-repo-mode): Don't override variables if
	they already have a buffer-local binding.

2023-03-20  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-find-workdir): New function.
	Thanks to Pascal Jäger for the idea.
	(ebuild-mode-portage-tmpdir): New custom variable.
	(ebuild-mode-map, ebuild-mode-menu): Keybinding and menu entry.

2023-02-28  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-process-environment): Set NO_COLOR
	in addition, see https://no-color.org/. Drop redundant test for
	XEmacs.

2023-02-27  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.62 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclass):
	Regenerated.

2023-02-21  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-update-copyright): Call lwarn with
	nil as second argument, which works for both GNU Emacs and XEmacs.

	* ebuild-mode.el (ebuild-repo-mode): Check if coding system
	utf-8-unix exists; it doesn't in XEmacs 21.4.

	* gentoo-newsitem-mode.el (gentoo-newsitem-insert-skeleton): Call
	ebuild-mode-time-string, so that the date is in the UTC time zone.
	* glep-mode.el (glep-mode-update-last-modified)
	(glep-mode-insert-skeleton): Ditto.
